# genai

./: README.md  main.py
agent-react-rag/: .dockerignore  Dockerfile  README.md  lambda_app.py  requirements.txt  server.py
agent-react-tools/: .gitignore  Dockerfile  Makefile  README.md  output.txt  requirements.txt  run_agent.py
genai-feat-private_assistant/: .dockerignore  .gitignore  Makefile  README.md  requirements.txt
genai-feat-private_assistant_v2-multimodal/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
genai-feat-private_assistant_v2-multimodal/configs/: config.yaml
genai-feat-private_assistant_v2-multimodal/private_assistant/app/: main.py  privacy.py  router.py  settings.py
genai-feat-private_assistant_v2-multimodal/private_assistant/attachments/: loaders.py  ocr.py  pipeline.py
genai-feat-private_assistant_v2-multimodal/private_assistant/eval/: lm_eval.sh
genai-feat-private_assistant_v2-multimodal/private_assistant/server/: api.py
genai-feat-private_assistant_v2-multimodal/private_assistant/ui/: chat_ui.py
genai_rag_alice/: .gitignore  README.md
genai_rag_app/: README.md  main.py  requirements.txt
genai_rag_citations/: .bm25.pkl  .env  .gitignore  Dockerfile  Makefile  README.md  rag_pipeline.py
genai_rag_doc_generator/: .gitignore  Dockerfile  Makefile  README.md  requirements.txt
getai_rag_citations/: README.md  requirements.txt
llm-finetune-sft-dpo/: .env.example  .gitignore  Dockerfile  Makefile  README.md  requirements.extra.txt  requirements.gpu.txt  requirements.txt
(+104 files in other folders)
