[project]
name = "genai-private-assistant"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.0",
  "httpx==0.27.0",
  "pydantic==2.8.2",
  "pyyaml==6.0.1",
  "gradio==4.40.0",
  "python-dotenv==1.0.1",
  "presidio-analyzer==2.2.354",
  "presidio-anonymizer==2.2.354"
]
